--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,17 +1,14 @@
 /* Style for the navbar brand */
-.navbar-brand {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #333;
-}
 
 /* Style for the search box */
 .search-box input[type="search"] {
   color: #0d28a6;
   padding: 8px 16px;
   border: 1px solid #ddd; /* Default border */
-  border-radius: 4px;
+  border-radius: 2px;
   transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  width: 174px;
+  height: 36px;
 }
 
 /* When the input is focused */
@@ -26,8 +23,10 @@
   background-color: #ffffff;
   border: 1px solid #0d28a6;
   color: #0d28a6;
-  border-radius: 4px;
-  transition: background-color 0.3s ease-in-out;
+  border-radius: 2px;
+  width: 70px;
+  height: 36px;
+  gap: 16px;
 }
 
 .search-box .btn:hover {
@@ -57,15 +56,4 @@
 
 .navbar-toggler-icon {
   background-color: #333;
-}
-
-/* Responsive behavior */
-@media (max-width: 767.98px) {
-  .search-box {
-    margin-bottom: 10px;
-  }
-
-  .navbar-nav {
-    text-align: center;
-  }
 }
