--- a/css/list-cars.css
+++ b/css/list-cars.css
@@ -1,3 +1,5 @@
+
+
 /* Remove underline from breadcrumb links */
 nav .breadcrumb a {
   color: black;
@@ -106,6 +108,37 @@ nav .breadcrumb a:hover {
   justify-content: center;
   align-items: center;
   margin-right: 10px;
+}
+
+.btn-save-car {
+  background-color: #0d28a6 !important;
+  border: none;
+  color: #ffffff !important;
+  width: 100px;
+  height: 50px;
+  border-radius: 2px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-cancel-car {
+  background-color: #ffffff !important;
+  color: #0d28a6 !important;
+  width: 100px;
+  height: 50px;
+  border-radius: 2px;
+  border-color: #0d28a6;
+  border-width: 2px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
